--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ ttf-parser = "0.25.1"
 pkg=[]
 print=["dep:log","dep:env_logger"]
 
+[target.'cfg(windows)'.build-dependencies]
+winres = "0.1.12"
+
 
 [package.metadata.bundle]
 identifier="cn.inkroom.fontview"
