impr: 更换默认字体获取逻辑

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,14 @@ rfd = "0.16.0"
 allsorts = "0.16.1"
 encoding_rs = "0.8.35"
 pico-args = "0.5.0"
-ttf-parser = "0.25.1"
+rust-fontconfig = "1.2.1"
 
+[profile.release]
+opt-level = "z"  # 优化体积而非速度，可选 "s" 作为替代
+lto = true       # 启用链接时优化，消除死代码
+codegen-units = 1  # 减少并行代码生成单元，提高优化效果
+panic = "abort"  # panic时直接终止，而非展开栈，减少标准库体积
+strip = true     # 自动剥离符号表，减小体积
 
 [features]
 pkg=[]
