feat: 字体子集化随机命名字体

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,10 @@
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
-	"forwardPorts":[5901],
-	"overrideCommand":false,
+	"forwardPorts": [
+		5901
+	],
+	"overrideCommand": false,
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -15,5 +17,9 @@
 			]
 		}
 	},
-	"containerEnv":{"DISPLAY":":1","VNCPASS":"font"}
+	"onCreateCommand": "git config user.name $(git --no-pager log --pretty=\"%an\" | head -n 1) && git config user.email $(git --no-pager log --pretty=\"%ce\" | head -n 1) && (test -e geckodriver || ( git clone https://github.com/yeslogic/allsorts && cd allsorts && git checkout -b 0.16.1 && sed -i \"31 s@base@pub base@;36 s@base@pub base@\" src/binary/read.rs ) ) && cargo clean && cargo build",
+	"containerEnv": {
+		"DISPLAY": ":1",
+		"VNCPASS": "font"
+	}
 }
