--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,7 @@ jobs:
           path: mini/app/*
   windows:
     runs-on: windows-latest
+    needs: ["mac-arm"]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -65,10 +66,6 @@ jobs:
           # Target architecture of the ffmpeg executable to install. Defaults to the
           # system architecture. Only x64 and arm64 are supported (arm64 only on Linux).
           architecture: ''
-          # Linking type of the binaries. Use "shared" to download shared binaries and 
-          # "static" for statically linked ones. Shared builds are currently only available
-          # for windows releases. Defaults to "static"
-          linking-type: static
           # As of version 3 of this action, builds are no longer downloaded from GitHub
           # except on Windows: https://github.com/GyanD/codexffmpeg/releases.
           github-token: ${{ github.server_url == 'https://github.com' && github.token || '' }}
@@ -76,8 +73,18 @@ jobs:
         uses: brndnmtthws/rust-action-rustup@v1
         with:
          toolchain: ${{ env.RUST_VERSION }}
+      - name: Update allsorts
+        run: |
+          git clone https://github.com/yeslogic/allsorts && cd allsorts && git checkout -b 0.16.1
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+          pattern: allsorts.rs
+          path: allsorts/src/binary
       - name: Build
         run: |
+          cat allsorts/src/binary/read.rs
           ffmpeg -i img/ico.png -vf "scale=48:48" windows.ico 
           cargo build --release
       - name: Upload artifacts
@@ -94,6 +101,12 @@ jobs:
         uses: brndnmtthws/rust-action-rustup@v1
         with:
          toolchain: ${{ env.RUST_VERSION }}
+      - name: Update allsorts
+        run: |
+          git clone https://github.com/yeslogic/allsorts 
+          cd allsorts
+          git checkout -b 0.16.1
+          sed -i '' "31 s@base@pub base@;36 s@base@pub base@" src/binary/read.rs
       - name: Build
         run: |
           mkdir out
@@ -128,6 +141,11 @@ jobs:
         with:
            name: app-mac-arm
            path: out/*
+      - name: Upload allsorts
+        uses: actions/upload-artifact@v4
+        with:
+           name: allsorts.rs
+           path: allsorts/src/binary/read.rs
   release:
     runs-on: ubuntu-22.04
     needs: ["mac-arm","linux","windows"]
