--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ env_logger = {version="0.11.8",optional=true}
 log = {version="0.4.28",optional=true}
 
 rfd = "0.16.0"
-allsorts = "0.16.1"
+allsorts = {version="0.16.1",path="./allsorts"}
 encoding_rs = "0.8.35"
 pico-args = "0.5.0"
 rust-fontconfig = "1.2.1"
