chore: git module

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,11 +3,11 @@ name: release
 on:
   push:
     branches: ['master']
-    paths-ignore:
-      - 'README.md'
-      - '.gitignore'
-      - '.dockerignore'
-      - 'build.sh'
+    paths:
+      - 'src/main.rs'
+      - 'build.rs'
+      - 'img/ico.png'
+      - 'Cargo.toml'
   workflow_dispatch:
 env:
   RUST_VERSION: 1.90.0
@@ -16,7 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
+        with: 
+          submodules: true
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -51,10 +53,11 @@ jobs:
           path: mini/app/*
   windows:
     runs-on: windows-latest
-    needs: ["mac-arm"]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
+        with: 
+          submodules: true
       - uses: FedericoCarboni/setup-ffmpeg@v3
         id: setup-ffmpeg
         with:
@@ -73,15 +76,6 @@ jobs:
         uses: brndnmtthws/rust-action-rustup@v1
         with:
          toolchain: ${{ env.RUST_VERSION }}
-      - name: Update allsorts
-        run: |
-          git clone https://github.com/yeslogic/allsorts && cd allsorts && git checkout -b 0.16.1
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          merge-multiple: true
-          pattern: allsorts.rs
-          path: allsorts/src/binary
       - name: Build
         run: |
           cat allsorts/src/binary/read.rs
@@ -96,17 +90,13 @@ jobs:
     runs-on: macos-14
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
+        with: 
+          submodules: true
       - name: Rust
         uses: brndnmtthws/rust-action-rustup@v1
         with:
          toolchain: ${{ env.RUST_VERSION }}
-      - name: Update allsorts
-        run: |
-          git clone https://github.com/yeslogic/allsorts 
-          cd allsorts
-          git checkout -b 0.16.1
-          sed -i '' "31 s@base@pub base@;36 s@base@pub base@" src/binary/read.rs
       - name: Build
         run: |
           mkdir out
@@ -141,11 +131,6 @@ jobs:
         with:
            name: app-mac-arm
            path: out/*
-      - name: Upload allsorts
-        uses: actions/upload-artifact@v4
-        with:
-           name: allsorts.rs
-           path: allsorts/src/binary/read.rs
   release:
     runs-on: ubuntu-22.04
     needs: ["mac-arm","linux","windows"]
@@ -154,10 +139,11 @@ jobs:
         packages: write
     steps:
         - name: Checkout repository
-          uses: actions/checkout@v5
+          uses: actions/checkout@v6
           with:
            fetch-tags: true
            fetch-depth: 0
+           submodules: true
         - name: Download artifacts
           uses: actions/download-artifact@v4
           with:
