--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,29 +58,13 @@ jobs:
         uses: actions/checkout@v6
         with: 
           submodules: true
-      - uses: FedericoCarboni/setup-ffmpeg@v3
-        id: setup-ffmpeg
-        with:
-          # A specific version to download, may also be "release" or a specific version
-          # like "6.1.0". At the moment semver specifiers (i.e. >=6.1.0) are supported
-          # only on Windows, on other platforms they are allowed but version is matched
-          # exactly regardless.
-          ffmpeg-version: release
-          # Target architecture of the ffmpeg executable to install. Defaults to the
-          # system architecture. Only x64 and arm64 are supported (arm64 only on Linux).
-          architecture: ''
-          # As of version 3 of this action, builds are no longer downloaded from GitHub
-          # except on Windows: https://github.com/GyanD/codexffmpeg/releases.
-          github-token: ${{ github.server_url == 'https://github.com' && github.token || '' }}
       - name: Rust
         uses: brndnmtthws/rust-action-rustup@v1
         with:
          toolchain: ${{ env.RUST_VERSION }}
       - name: Build
         run: |
-          cat allsorts/src/binary/read.rs
-          ffmpeg -i img/ico.png -vf "scale=48:48" windows.ico 
-          cargo build --release
+          cargo build --release -vv
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
