--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,10 @@ print=["dep:log","dep:env_logger"]
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1.12"
 
+[build-dependencies]
+reqwest = {version="0.12.26",features=["blocking"]}
+zip = "6.0.0"
+
 
 [package.metadata.bundle]
 identifier="cn.inkroom.fontview"
