--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ winres = "0.1.12"
 
 [build-dependencies]
 reqwest = {version="0.12.26",features=["blocking"]}
+sevenz-rust = "0.6.1"
 zip = "6.0.0"
 
 
